Finishing a draft of the content in lab1 about using Bitbucket.

--- a/labs/lab1/cs380F2014-lab1.tex
+++ b/labs/lab1/cs380F2014-lab1.tex
@@ -69,41 +69,34 @@ challenges that you face.
 
 \end{enumerate}
 
-\section*{Creating a New Repository}
+\section*{Creating and Populating a New Git Repository}
 
-Now that you have learned how to clone an existing Git repository, you should make a new repository in the {\tt
-cs112S2014/} directory that you previously created.  First, make a new directory called {\tt cs112S2014-<your user
-name>}. Then, change into this directory and type the command {\tt git init .}.  At this point, you should go into the
-{\tt cs112s2014-share} repository and use the {\tt cp -r} command to copy the entire {\tt labs/} directory from the {\tt
-cs112s2014-share} repository to {\tt cs112S2014-<your user name>}.  Once the files are in your own Git repository,
-please use the {\tt git add} and {\tt git commit} commands to add them correctly. If you do not know how to use the {\tt
-git add} and {\tt git commit} commands in the terminal window, please learn more about them by searching on the
-Internet, talking about them with your team, and discussing them with the course instructor.
+Now that you have learned more about using Git, you should make a new repository in the {\tt cs380F2014/} directory that
+you previously created.  First, make a new directory called {\tt cs380F2014\-<your user name>}. Now, you can use the
+{\tt git init} command to turn this directory into a local Git repository.  After completion this step, you should
+make a {\tt lab1/} directory and then create a plain-text file (e.g., a {\tt .txt}, {\tt .md}, or {\tt .tex} file) with
+a name containing the word ``features''.  For instance, if you choose to write this report in \LaTeX, then you would
+name your file {\tt features.tex}. Finally, you must create an additional plain-text file with a name including the word
+``installation''.  Again, if you decide to write this report in \LaTeX, then you could create a file called {\tt
+  installation.tex}. 
 
 Next, you should use the Bitbucket Web site to create a repository that has the same name as the local directory and
-local repository.  You must follow Bitbucket's instructions to push the code and tags in your local repository to the
-remote one. When you are finished with this step, you should see in your Web browser that the Bitbucket servers are
-storing the two Java programs. Once the Git repository contains the correct files, you should share your Bitbucket
-repository with the course instructor, whose my Bitbucket user name is ``gkapfham''.
+local repository (i.e., {\tt cs380F2014-<your user name>}).  You must follow Bitbucket's instructions to push the code
+and tags in your local repository to the remote one. When you are finished with this step, you should see in your Web
+browser that the Bitbucket servers are storing the two Java programs. Once the Git repository contains the correct
+files, you should share your Bitbucket repository with the course instructor, whose Bitbucket user name is ``gkapfham''.
+
+% At this point, you should go into the
+% {\tt cs112s2014-share} repository and use the {\tt cp -r} command to copy the entire {\tt labs/} directory from the {\tt
+% cs112s2014-share} repository to {\tt cs380F2014-<your user name>}.  Once the files are in your own Git repository,
+% please use the {\tt git add} and {\tt git commit} commands to add them correctly. If you do not know how to use the {\tt
+% git add} and {\tt git commit} commands in the terminal window, please learn more about them by searching on the
+% Internet, talking about them with your team, and discussing them with the course instructor.
+
+\section*{}
 
 
-\section*{Compiling, Running, and Understanding Java Programs}
-
-  Once you have mastered the use of Git and version control, you should return to the {\tt labs/lab1/src/} directory that
-  contains the two Java programs. Now, use the Java compiler to compile the {\tt Hooray.java} program.  That is, you
-  should type {\tt javac Hooray.java} in the terminal window.  Next, you can run this program by typing {\tt java
-  Hooray} in the terminal window.  What output does this program produce?  Why does it create this output? How do you
-  stop this program? 
-
-  After compiling, using, and studying the {\tt Hooray} program, you should complete the same steps for the {\tt
-  Weeee.java} program. Go ahead and compile and run this program.  What output does it produce? Why does it create this
-  output? How is the output similar to and different from that which was created by the {\tt Hooray} program? Once you
-  have finished studying and understanding these two programs, add comments to the code to explain what they do and how
-  they work. Finally, please make sure that the commented version of each program is correctly committed to your Git
-  version control repository hosted by Bitbucket.
   
-  % After you
-  % are done running both of these programs, you should write a short one-page report that explains:
 
 \section*{Summary of the Required Deliverables}
 
