Final version of cs380F2014-lab1.tex.

--- a/labs/lab1/cs380F2014-lab1.tex
+++ b/labs/lab1/cs380F2014-lab1.tex
@@ -106,7 +106,7 @@ to learn more about it, and a detailed description of the features that it provi
 should comment on whether or not it furnishes any of the features that you mentioned in your ``features'' document.
 Whenever possible, the report should comment on the type of data that the tool aims to manage. 
 
-When writing these two documents, you must to adhere to the Honor Code statement as articulated in the syllabus.  In
+When writing these two documents, you must adhere to the Honor Code statement as articulated in the syllabus.  In
 particular, you must take care to ensure that you properly cite your sources and that you use your own words to explain
 both the desired features and the ten tools. 
 
