--- a/labs/lab2/cs380F2014-lab2.tex
+++ b/labs/lab2/cs380F2014-lab2.tex
@@ -62,8 +62,6 @@ In particular, you must study, at minimum, the following commands:
   \item {\tt summarize} or {\tt summary}
 \end{itemize}
 
-
-  
   % \item Now, you need to test to see if you can authenticate with the Bitbucket servers.  First, show the course
   %   instructor that you have correctly configured your Bitbucket account.  Now, ask the instructor to share the course's
   %   Git repository with you.  Open a terminal window on your workstation and change into the directory where you will
@@ -78,22 +76,36 @@ In particular, you must study, at minimum, the following commands:
   %   look in the {\tt labs/lab1/src/} directory and use Vim to study the two Java programs that you find.  Remember, the
   %   {\tt cd} command allows you to change into a directory. 
 
-\section*{Creating and Populating a New Git Repository}
+\section*{Procedural Exploration of a Data Set}
 
-Now that you have learned more about using Git, you should make a new repository in the {\tt cs380F2014/} directory that
-you previously created.  First, make a new directory called {\tt cs380F2014\-<your user name>}. Now, you can use the
-{\tt git init} command to turn this directory into a local Git repository.  After completing this step, you should
-make a {\tt lab1/} directory and then create a plain-text file (e.g., a {\tt .txt}, {\tt .md}, or {\tt .tex} file) with
-a name containing the word ``features''.  For instance, if you choose to write this report in \LaTeX, then you would
-name your file {\tt features.tex}. Finally, you must create an additional plain-text file with a name including the word
-``tools''.  Again, if you decide to write this report in \LaTeX, then you could create a file called {\tt
-  tools.tex}. 
+After you have learned more about how each one of the aforementioned commands works, you should learn more about the
+{\tt algae} data set that is part of the {\tt DMwR} library. What are the names of the attributes in this data set? How
+many attributes are in the data set? How many rows are in the data set? While you must use the R programming language to
+answer these questions, you can check your responses by visiting the ``Algae Data Set Description'' in the UCI Machine
+Learning Repository and the ``Predicting Algae Blooms'' chapter in Torgo's book. 
 
-Next, you should use the Bitbucket Web site to create a repository that has the same name as the local directory and
-local repository (i.e., {\tt cs380F2014-<your user name>}).  You must follow Bitbucket's instructions to push the code
-and tags in your local repository to the remote one. When you are finished with this step, you should see in your Web
-browser that the Bitbucket servers are storing the two text files. Once the Git repository contains the correct files,
-you should share your Bitbucket repository with the course instructor, whose Bitbucket user name is ``gkapfham''.
+The a1 attribute gives the frequency number of a harmful algae known as "a1" in the data set. Please note that the data
+set does not contain any information about the name or the characteristics of this type of alga. Each value in the a1
+attribute corresponds to a frequency for this algae being found in the specified environment. In this case, small values
+are better since they indicate the presence of less of this harmful algae. Using the mean and the median values of the
+frequencies for alga a1, is this algae more likely to bloom in small, medium, or large rivers?
+
+The a2 and a3 attributes respectively give the frequency number of a harmful algae known as "a2" and "a3" in the data
+set. Using the mean and the median values of the frequencies for algae a2 and a3, are these algae more likely to bloom
+in small, medium, or large rivers?
+
+The algae data set also contains information about the speed of the rivers, as stored in the speed attribute. Using the
+mean and the median values for the a1, a2, and a3 algae, are these algae more likely to bloom in rivers with a low,
+medium, or high speed?
+
+The Cl attribute in the algae data set describes the mean amount of chlorophyll in the rivers. What is the relationship
+between the mean value of chlorophyll and the amount of the a1, a2, and a3 algae on the rivers? For instance, if a river
+has a high amount of chlorophyll, does this mean that it will contain a high or a low amount of each algae?
+
+There are many other interesting trends evident in the algae data set. Using any combination of R commands, please
+identify and try to explain one additional trend. If you are interested, you may also want to explore the visualization
+of a trend by using the Lattice package that is available by typing library(lattice) at the R prompt. For extra credit,
+you may turn in visualizations, in addition to your code segments, for all of the previous questions.
 
 % At this point, you should go into the
 % {\tt cs112s2014-share} repository and use the {\tt cp -r} command to copy the entire {\tt labs/} directory from the {\tt
@@ -101,23 +113,6 @@ you should share your Bitbucket repository with the course instructor, whose Bit
 % please use the {\tt git add} and {\tt git commit} commands to add them correctly. If you do not know how to use the {\tt
 % git add} and {\tt git commit} commands in the terminal window, please learn more about them by searching on the
 % Internet, talking about them with your team, and discussing them with the course instructor.
-
-\section*{Investigating Data Management Tools}
-
-Using your ``features'' file in the Git repository, please write a short one-page document that explains the features
-that you think data management tools should provide.  In advance of listing and explaining these features, your
-document should clearly define the term ``data management tool''. Whenever possible, you should rank the features in the
-order of their importance.
-
-In the ``tools'' file, you should prepare a comprehensive listing of ten free and open-source tools that provide data
-management facilities.  This report should give the name of the tool, the Web site(s) and/or papers that you referenced
-to learn more about it, and a detailed description of the features that it provides.  As you explain each tool, you
-should comment on whether or not it furnishes any of the features that you mentioned in your ``features'' document.
-Whenever possible, the report should comment on the type of data that the tool aims to manage. 
-
-When writing these two documents, you must adhere to the Honor Code statement as articulated in the syllabus.  In
-particular, you must take care to ensure that you properly cite your sources and that you use your own words to explain
-both the desired features and the ten tools. 
 
 \section*{Summary of the Required Deliverables}
 
